# faststream-tutorial

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs-deploy.yaml
docs/: documentation.md  first_app.md  index.md  introduction.md  mkdocs.yml  next_steps.md  pydantic.md  quickstart.md  setup.md  testing.md
docs/basics/: brokers.md  handlers.md  index.md
docs/docs/: documentation.md  first_app.md  index.md  introduction.md  next_steps.md  pydantic.md  setup.md  testing.md
docs/docs/ru/: documentation.md  first_app.md  index.md  inter_service.md  introduction.md  next_steps.md  pydantic.md  setup.md  testing.md
docs/docs/stylesheets/: extra.css
docs/docs_src/: app.py  app_documentation.py  app_pydantic.py  send_message.py  send_message_invalid.py  send_message_pydantic.py
src/tutorial/: app.py  send_message.py
src/tutorial/documentation/: app.py
src/tutorial/first_app/: app.py
src/tutorial/inter_service/: app.py  app2.py
src/tutorial/pydantic/: app.py  send_message.py  send_message_invalid.py
tests/: .null-ls_403175_test_app.py  test_app.py  test_app1.py  test_app2.py
