[build-system]
requires = ["setuptools>=66.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "faststream-tutorial"
dynamic = ["version"]
description = "Tutorial"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "Sergey Yavorsky", email = "maclovi.dev@gmail.com" },
]
dependencies = [
    # app
    "faststream[rabbit,cli]==0.5.40",
    # docs
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.12",
    "mkdocstrings[python]==0.29.1",
    "mkdocs-minify-plugin==0.8.0",
    # tests
    "coverage[toml]==7.8.0",
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
]

[project.urls]
Homepage = "https://github.com/Maclovi/faststream-tutorial"
Documentation = "https://github.com/Maclovi/faststream-tutorial/README.md"
Repository = "https://github.com/Maclovi/faststream-tutorial"
Issues = "https://github.com/Maclovi/faststream-tutorial/issues"

[tool.codespell]
skip = "*.pyi,*.pyc,./site"
